# grand-cypher

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  examples.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codspeed.yml  python-package.yml
docs/: Architecture.md  Expressions.md  Get-Started.md  Hints.md  Label-Convention.md  architecture.md  examples.md
grandcypher/: __init__.py  hinter.py  indexer.py  struct.py  test_aggregation_classes.py  test_aggregation_functions.py  test_collect.py  test_edge_hop.py  test_entity_attribute_getter.py  test_hint_where.py  test_hinter.py  test_hints.py  test_indexer.py  test_indexer_plumbing.py  test_list_predicates.py  test_nested_expressions.py  test_node_edge_match.py  test_parser.py  test_queries.py  test_relationship_list_predicates.py  test_scalar_functions.py  test_scoped_expressions.py  test_struct.py  test_subquery.py  test_to_indexer_ast.py  test_types.py  test_unify_zero_hop_nodes.py  test_version.py  types.py
