[project]
name = "grand-cypher"
version = "1.0.1"
authors = [
    { name = "Jordan Matelsky", email = "opensource@matelsky.com" }
]
requires-python = ">=3.10"
dependencies = [
    "grandiso>=2.2.0",
    "lark>=1.2.2",
    "networkx>=3.4.2",
]
description = "Query Grand and NetworkX graphs using Cypher syntax."
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grandcypher"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.3",
    "pytest>=8.3.5",
]
